<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="valbtn_ingresar">Ingresar</string>
    <string name="valbtn_registrarse">Registrarse</string>
    <string name="valtitulo_registraUser">Registrarse Como Usuario</string>
    <string name="valtitulo_registraRestaurant">Registrarse Como Restaurante</string>
    <string name="bienvenido">¡Bienvenido a la aplicación!</string>
    <string name="tipo_usuario">¿Quieres registrarte como restaurante o como usuario?</string>
    <string name="val_correo">Correo Electrónico</string>
    <string name="val_urlResta">Url Restaurante</string>
    <string name="val_tiempo">Tiempo de Demora</string>
    <string name="val_contraseña">Contraseña</string>
    <string name="valbtn_registrar">Registrar</string>
    <string name="continuar">Continuar</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="msjeyatienes">¿Ya tienes una cuenta?</string>
    <string name="link_ingresa">Ingresa</string>
    <string name="titulo_principal">Encuentra tu restaurante favorita</string>
    <string name="titulo_com">Encuentra tu comida favorita</string>
    <string name="quepodemosofrecer">¿Qué podemos ofrecerte?</string>
    <string name="val_nombre">Nombres</string>
    <string name="val_nombreR">Nombre</string>
    <string name="val_apellidos">Apellidos</string>
    <string name="val_anionacimiento">Año nacimiento</string>
    <string name="val_telefono">Telefono</string>
    <string name="val_direccion">Dirección</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_principal_scrolling">PrincipalScrollingActivity</string>
    <string name="Ordenahora">Ordena ahora</string>
    <string name="action_settings">Settings</string>
    <string name="felicidades">Felicidades</string>
    <string name="haactivado">Ha activado creado correctamente su perfil</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_principal">Ordenar</string>
    <string name="menu_metodo">Método de pago</string>
    <string name="menu_seguimiento">Pedidos</string>
    <string name="menu_calificacion">Calificación y comentarios</string>
    <string name="menu_soporte">Soporte al Cliente</string>
    <string name="descripcion_principal">En Chaski, queremos que disfrutar de tu comida
        favorita sea lo más fácil y rápido posible. Por eso, hemos creado una app que te
        permite ordenar comida de tus restaurantes favoritos con solo unos clic</string>
    <string name="tiempo">Tiempo</string>
    <string name="title_activity_register_restaurant">RegisterRestaurantActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_envio">EnvioActivity</string>

</resources>