<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="323dp"
        android:layout_height="198dp"
        android:layout_marginTop="24dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/login"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="89dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondorojologo"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#EA2242"
        android:text="@string/valbtn_ingresar"
        android:textAlignment="viewStart"
        android:textColorLink="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContrasena" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:backgroundTint="#C6C6C6"
        android:text="@string/valbtn_registrarse"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar"
        app:layout_constraintVertical_bias="0.122"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="374dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCorreoLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/redondear_edit"
            android:hint="@string/val_correo"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtContrasena"
        android:layout_width="371dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtContraseniaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/val_contraseña"
            android:background="@drawable/redondear_edit"
            android:inputType="textPassword"
            android:textColorHint="#546E7A" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>