<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmaTipoUserActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/registermodificado"
            tools:ignore="Suspicious0dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:text="@string/bienvenido"
            android:textColor="#EA2242"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_usuario"
            android:gravity="center" />

        <RadioGroup
            android:id="@+id/rgOpcionesUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/rbRestaurante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Restaurante" />

            <RadioButton
                android:id="@+id/rbUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Usuario" />
        </RadioGroup>

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="375dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#EA2242"
            android:text="@string/continuar"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>